--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Svenskt Kvinnobiografiskt lexikon part 1\n",
-    "version 1.3.4.33\n",
+    "version 1.3.4.34\n",
     "\n",
     "\n",
     "* Denna [Jupityr Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) \n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -70,11 +70,11 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1526 entries, 0 to 1525\n",
+      "RangeIndex: 1538 entries, 0 to 1537\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1526 non-null object\n",
+      "skblid    1538 non-null object\n",
       "dtypes: object(1)\n",
-      "memory usage: 12.0+ KB\n"
+      "memory usage: 12.1+ KB\n"
      ]
     }
    ],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -111,11 +111,11 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1397 entries, 542 to 821\n",
+      "Int64Index: 1409 entries, 548 to 829\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1397 non-null object\n",
+      "skblid    1409 non-null object\n",
       "dtypes: object(1)\n",
-      "memory usage: 21.8+ KB\n"
+      "memory usage: 22.0+ KB\n"
      ]
     }
    ],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -152,11 +152,11 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1460 entries, 0 to 1459\n",
+      "RangeIndex: 1470 entries, 0 to 1469\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1460 non-null object\n",
+      "skblid    1470 non-null object\n",
       "dtypes: object(1)\n",
-      "memory usage: 11.5+ KB\n"
+      "memory usage: 11.6+ KB\n"
      ]
     }
    ],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -211,11 +211,11 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1460 entries, 0 to 1459\n",
+      "RangeIndex: 1470 entries, 0 to 1469\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1460 non-null object\n",
+      "skblid    1470 non-null object\n",
       "dtypes: object(1)\n",
-      "memory usage: 11.5+ KB\n"
+      "memory usage: 11.6+ KB\n"
      ]
     }
    ],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,19 +250,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "both          1397\n",
+       "both          1407\n",
        "left_only       63\n",
-       "right_only       0\n",
+       "right_only       2\n",
        "Name: _merge, dtype: int64"
       ]
      },
-     "execution_count": 334,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -321,17 +321,27 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1470</th>\n",
+       "      <td>LottenEdholm</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1471</th>\n",
+       "      <td>SaraWennerbergReuter</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [skblid, _merge]\n",
-       "Index: []"
+       "                    skblid      _merge\n",
+       "1470          LottenEdholm  right_only\n",
+       "1471  SaraWennerbergReuter  right_only"
       ]
      },
-     "execution_count": 337,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -350,12 +360,12 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 0 entries\n",
+      "Int64Index: 2 entries, 1470 to 1471\n",
       "Data columns (total 2 columns):\n",
-      "skblid    0 non-null object\n",
-      "_merge    0 non-null category\n",
+      "skblid    2 non-null object\n",
+      "_merge    2 non-null category\n",
       "dtypes: category(1), object(1)\n",
-      "memory usage: 104.0+ bytes\n"
+      "memory usage: 138.0+ bytes\n"
      ]
     }
    ],
@@ -365,15 +375,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0  antal poster\n",
-      "Ingen fil skapas inga nya poster\n"
+      "2  antal poster\n"
      ]
     }
    ],
@@ -441,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -482,35 +491,57 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2020-08-30</td>\n",
-       "      <td>1894-10-21</td>\n",
-       "      <td>1986-01-05</td>\n",
-       "      <td>Kristina församling</td>\n",
-       "      <td>Allhelgona församling</td>\n",
+       "      <td>2020-09-03</td>\n",
+       "      <td>1839-04-18</td>\n",
+       "      <td>1930-07-12</td>\n",
+       "      <td>Örebro stadsförsamling</td>\n",
+       "      <td>Hovförsamlingen</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>SigridSynnergren</td>\n",
-       "      <td>1459</td>\n",
+       "      <td>LottenEdholm</td>\n",
+       "      <td>1470</td>\n",
        "      <td>OK</td>\n",
-       "      <td>/Sigrid/ Birgitta</td>\n",
-       "      <td>Synnergren</td>\n",
-       "      <td>Textilkonstnär, kyrkokonstnär, rektor</td>\n",
+       "      <td>Lovisa (/Lotten/) Christina Charlotta</td>\n",
+       "      <td>Edholm</td>\n",
+       "      <td>Hovfunktionär, pionjär inom svenska Röda Korse...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-09-03</td>\n",
+       "      <td>1875-02-11</td>\n",
+       "      <td>1959-03-29</td>\n",
+       "      <td>Otterstads församling</td>\n",
+       "      <td>Maria Magdalena församling</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SaraWennerbergReuter</td>\n",
+       "      <td>1471</td>\n",
+       "      <td>OK</td>\n",
+       "      <td>/Sara/ Margareta Eugenia Eufrosyne</td>\n",
+       "      <td>Wennerberg-Reuter</td>\n",
+       "      <td>Organist, kompositör, pionjär</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  publishedDate   birthdate   deathdate          birthparish  \\\n",
-       "0    2020-08-30  1894-10-21  1986-01-05  Kristina församling   \n",
+       "  publishedDate   birthdate   deathdate             birthparish  \\\n",
+       "0    2020-09-03  1839-04-18  1930-07-12  Örebro stadsförsamling   \n",
+       "1    2020-09-03  1875-02-11  1959-03-29   Otterstads församling   \n",
        "\n",
-       "             deathparish  ISNI              SKBL  index skbl_status  \\\n",
-       "0  Allhelgona församling   NaN  SigridSynnergren   1459          OK   \n",
+       "                  deathparish  ISNI                  SKBL  index skbl_status  \\\n",
+       "0             Hovförsamlingen   NaN          LottenEdholm   1470          OK   \n",
+       "1  Maria Magdalena församling   NaN  SaraWennerbergReuter   1471          OK   \n",
        "\n",
-       "           firstname    lastname                               subtitle  \n",
-       "0  /Sigrid/ Birgitta  Synnergren  Textilkonstnär, kyrkokonstnär, rektor  "
+       "                               firstname           lastname  \\\n",
+       "0  Lovisa (/Lotten/) Christina Charlotta             Edholm   \n",
+       "1     /Sara/ Margareta Eugenia Eufrosyne  Wennerberg-Reuter   \n",
+       "\n",
+       "                                            subtitle  \n",
+       "0  Hovfunktionär, pionjär inom svenska Röda Korse...  \n",
+       "1                      Organist, kompositör, pionjär  "
       ]
      },
-     "execution_count": 290,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
