--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -34,13 +34,25 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last run:  2020-09-03 12:59:34.878314\n"
+     ]
+    }
+   ],
    "source": [
     "import urllib3, json\n",
     "import pandas as pd \n",
+    "from datetime import datetime\n",
     "http = urllib3.PoolManager() \n",
     "pd.set_option(\"display.max.columns\", None)\n",
     "pd.set_option('display.max_rows', None)\n",
+    "\n",
+    "now = datetime.now()\n",
+    "print(\"Last run: \", now)\n",
     "\n",
     "dftot = pd.DataFrame()\n",
     " \n",
@@ -152,9 +164,9 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1470 entries, 0 to 1469\n",
+      "RangeIndex: 1472 entries, 0 to 1471\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1470 non-null object\n",
+      "skblid    1472 non-null object\n",
       "dtypes: object(1)\n",
       "memory usage: 11.6+ KB\n"
      ]
@@ -211,9 +223,9 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1470 entries, 0 to 1469\n",
+      "RangeIndex: 1472 entries, 0 to 1471\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1470 non-null object\n",
+      "skblid    1472 non-null object\n",
       "dtypes: object(1)\n",
       "memory usage: 11.6+ KB\n"
      ]
@@ -256,9 +268,9 @@
     {
      "data": {
       "text/plain": [
-       "both          1407\n",
+       "both          1409\n",
        "left_only       63\n",
-       "right_only       2\n",
+       "right_only       0\n",
        "Name: _merge, dtype: int64"
       ]
      },
@@ -321,24 +333,14 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1470</th>\n",
-       "      <td>LottenEdholm</td>\n",
-       "      <td>right_only</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1471</th>\n",
-       "      <td>SaraWennerbergReuter</td>\n",
-       "      <td>right_only</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    skblid      _merge\n",
-       "1470          LottenEdholm  right_only\n",
-       "1471  SaraWennerbergReuter  right_only"
+       "Empty DataFrame\n",
+       "Columns: [skblid, _merge]\n",
+       "Index: []"
       ]
      },
      "execution_count": 15,
@@ -360,12 +362,12 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 2 entries, 1470 to 1471\n",
+      "Int64Index: 0 entries\n",
       "Data columns (total 2 columns):\n",
-      "skblid    2 non-null object\n",
-      "_merge    2 non-null category\n",
+      "skblid    0 non-null object\n",
+      "_merge    0 non-null category\n",
       "dtypes: category(1), object(1)\n",
-      "memory usage: 138.0+ bytes\n"
+      "memory usage: 104.0+ bytes\n"
      ]
     }
    ],
@@ -382,7 +384,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2  antal poster\n"
+      "0  antal poster\n",
+      "Ingen fil skapas inga nya poster\n"
      ]
     }
    ],
@@ -442,138 +445,10 @@
     "        dict_writer.writerows(listNewItems)\n",
     "\n",
     "    dfSKBLcsv = pd.read_csv(\"SKBL_newfile.csv\", sep=\",\")   \n",
-    "    \n",
+    "    dfSKBLcsv\n",
     "else:\n",
     "    print (\"Ingen fil skapas inga nya poster\") \n",
     "            \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>publishedDate</th>\n",
-       "      <th>birthdate</th>\n",
-       "      <th>deathdate</th>\n",
-       "      <th>birthparish</th>\n",
-       "      <th>deathparish</th>\n",
-       "      <th>ISNI</th>\n",
-       "      <th>SKBL</th>\n",
-       "      <th>index</th>\n",
-       "      <th>skbl_status</th>\n",
-       "      <th>firstname</th>\n",
-       "      <th>lastname</th>\n",
-       "      <th>subtitle</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2020-09-03</td>\n",
-       "      <td>1839-04-18</td>\n",
-       "      <td>1930-07-12</td>\n",
-       "      <td>Örebro stadsförsamling</td>\n",
-       "      <td>Hovförsamlingen</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>LottenEdholm</td>\n",
-       "      <td>1470</td>\n",
-       "      <td>OK</td>\n",
-       "      <td>Lovisa (/Lotten/) Christina Charlotta</td>\n",
-       "      <td>Edholm</td>\n",
-       "      <td>Hovfunktionär, pionjär inom svenska Röda Korse...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2020-09-03</td>\n",
-       "      <td>1875-02-11</td>\n",
-       "      <td>1959-03-29</td>\n",
-       "      <td>Otterstads församling</td>\n",
-       "      <td>Maria Magdalena församling</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>SaraWennerbergReuter</td>\n",
-       "      <td>1471</td>\n",
-       "      <td>OK</td>\n",
-       "      <td>/Sara/ Margareta Eugenia Eufrosyne</td>\n",
-       "      <td>Wennerberg-Reuter</td>\n",
-       "      <td>Organist, kompositör, pionjär</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  publishedDate   birthdate   deathdate             birthparish  \\\n",
-       "0    2020-09-03  1839-04-18  1930-07-12  Örebro stadsförsamling   \n",
-       "1    2020-09-03  1875-02-11  1959-03-29   Otterstads församling   \n",
-       "\n",
-       "                  deathparish  ISNI                  SKBL  index skbl_status  \\\n",
-       "0             Hovförsamlingen   NaN          LottenEdholm   1470          OK   \n",
-       "1  Maria Magdalena församling   NaN  SaraWennerbergReuter   1471          OK   \n",
-       "\n",
-       "                               firstname           lastname  \\\n",
-       "0  Lovisa (/Lotten/) Christina Charlotta             Edholm   \n",
-       "1     /Sara/ Margareta Eugenia Eufrosyne  Wennerberg-Reuter   \n",
-       "\n",
-       "                                            subtitle  \n",
-       "0  Hovfunktionär, pionjär inom svenska Röda Korse...  \n",
-       "1                      Organist, kompositör, pionjär  "
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dfSKBLcsv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def make_WDclickable(val):\n",
-    "    return '<a target=\"_blank\" href=\"https://hub.toolforge.org/P4963:{}?site=wikidata\">WD {}</a>'.format(val, val)\n",
-    "def make_SKBLclickable(val):\n",
-    "    return '<a target=\"_blank\" href=\"https://skbl.se/en/article/{}\">SKBL {}</a>'.format(val, val)\n",
-    "\n",
-    "\n",
-    "#dfmerge['WD'] = dfmerge.apply(lambda x: make_WDclickable(x['skblid']), axis=1)\n",
-    "#dfmerge['SKBL'] = dfmerge.apply(lambda x: make_SKBLclickable(x['skblid']), axis=1)\n",
-    " \n",
-    "#dfmerge['WD'] = dfmerge['skblid']\n",
-    "#dfmerge['SKBL'] = dfmerge['skblid']\n",
-    "#dfmerge = dfmerge.style.format({'WD': make_WDclickable})  \n",
-    "#dfmergedfmerge.style.format({'SKBL': make_SKBLclickable})  \n",
-    "SKBLnew_left = dfmerge[dfmerge['_merge']==\"left_only\"]\n",
-    "\n",
-    "#SKBLnew_left = SKBLnew_left.to_html(escape=False)\n",
-    "#SKBLnew_left.write(SKBLnew_left, unsafe_allow_html=True)\n",
-    "#SKBLnew_left"
    ]
   },
   {
