--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -39,7 +39,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2020-09-03 12:59:34.878314\n"
+      "Last run:  2020-09-04 16:36:18.376547\n"
      ]
     }
    ],
@@ -82,11 +82,11 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1538 entries, 0 to 1537\n",
+      "RangeIndex: 1544 entries, 0 to 1543\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1538 non-null object\n",
+      "skblid    1544 non-null object\n",
       "dtypes: object(1)\n",
-      "memory usage: 12.1+ KB\n"
+      "memory usage: 12.2+ KB\n"
      ]
     }
    ],
@@ -123,11 +123,11 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1409 entries, 548 to 829\n",
+      "Int64Index: 1415 entries, 550 to 831\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1409 non-null object\n",
+      "skblid    1415 non-null object\n",
       "dtypes: object(1)\n",
-      "memory usage: 22.0+ KB\n"
+      "memory usage: 22.1+ KB\n"
      ]
     }
    ],
@@ -164,9 +164,9 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1472 entries, 0 to 1471\n",
+      "RangeIndex: 1475 entries, 0 to 1474\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1472 non-null object\n",
+      "skblid    1475 non-null object\n",
       "dtypes: object(1)\n",
       "memory usage: 11.6+ KB\n"
      ]
@@ -223,9 +223,9 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1472 entries, 0 to 1471\n",
+      "RangeIndex: 1475 entries, 0 to 1474\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1472 non-null object\n",
+      "skblid    1475 non-null object\n",
       "dtypes: object(1)\n",
       "memory usage: 11.6+ KB\n"
      ]
@@ -268,9 +268,9 @@
     {
      "data": {
       "text/plain": [
-       "both          1409\n",
+       "both          1412\n",
        "left_only       63\n",
-       "right_only       0\n",
+       "right_only       3\n",
        "Name: _merge, dtype: int64"
       ]
      },
@@ -333,14 +333,30 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1475</th>\n",
+       "      <td>BarbroKerstinElisabetSoderberg</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1476</th>\n",
+       "      <td>ClaraNataliaTeresiaEuren</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1477</th>\n",
+       "      <td>MarianneLindsten</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [skblid, _merge]\n",
-       "Index: []"
+       "                              skblid      _merge\n",
+       "1475  BarbroKerstinElisabetSoderberg  right_only\n",
+       "1476        ClaraNataliaTeresiaEuren  right_only\n",
+       "1477                MarianneLindsten  right_only"
       ]
      },
      "execution_count": 15,
@@ -362,12 +378,12 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 0 entries\n",
+      "Int64Index: 3 entries, 1475 to 1477\n",
       "Data columns (total 2 columns):\n",
-      "skblid    0 non-null object\n",
-      "_merge    0 non-null category\n",
+      "skblid    3 non-null object\n",
+      "_merge    3 non-null category\n",
       "dtypes: category(1), object(1)\n",
-      "memory usage: 104.0+ bytes\n"
+      "memory usage: 155.0+ bytes\n"
      ]
     }
    ],
@@ -384,8 +400,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0  antal poster\n",
-      "Ingen fil skapas inga nya poster\n"
+      "3  antal poster\n"
      ]
     }
    ],
@@ -453,17 +468,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ended:  2020-09-04 16:36:21.040456\n"
+     ]
+    }
+   ],
+   "source": [
+    "end = datetime.now()\n",
+    "print(\"Ended: \", end)"
+   ]
   },
   {
    "cell_type": "code",
