--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -39,20 +39,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2020-09-04 16:36:18.376547\n"
+      "Last run:  2020-09-11 19:49:13.382534\n"
      ]
     }
    ],
    "source": [
+    "from datetime import datetime\n",
+    "print(\"Last run: \", datetime.now())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import urllib3, json\n",
     "import pandas as pd \n",
-    "from datetime import datetime\n",
     "http = urllib3.PoolManager() \n",
     "pd.set_option(\"display.max.columns\", None)\n",
     "pd.set_option('display.max_rows', None)\n",
     "\n",
-    "now = datetime.now()\n",
-    "print(\"Last run: \", now)\n",
     "\n",
     "dftot = pd.DataFrame()\n",
     " \n",
@@ -74,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -82,11 +89,11 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1544 entries, 0 to 1543\n",
+      "RangeIndex: 1556 entries, 0 to 1555\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1544 non-null object\n",
+      "skblid    1556 non-null object\n",
       "dtypes: object(1)\n",
-      "memory usage: 12.2+ KB\n"
+      "memory usage: 12.3+ KB\n"
      ]
     }
    ],
@@ -96,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -123,11 +130,11 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1415 entries, 550 to 831\n",
+      "Int64Index: 1427 entries, 550 to 832\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1415 non-null object\n",
+      "skblid    1427 non-null object\n",
       "dtypes: object(1)\n",
-      "memory usage: 22.1+ KB\n"
+      "memory usage: 22.3+ KB\n"
      ]
     }
    ],
@@ -139,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -164,11 +171,11 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1475 entries, 0 to 1474\n",
+      "RangeIndex: 1488 entries, 0 to 1487\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1475 non-null object\n",
+      "skblid    1488 non-null object\n",
       "dtypes: object(1)\n",
-      "memory usage: 11.6+ KB\n"
+      "memory usage: 11.8+ KB\n"
      ]
     }
    ],
@@ -206,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -223,11 +230,11 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1475 entries, 0 to 1474\n",
+      "RangeIndex: 1488 entries, 0 to 1487\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1475 non-null object\n",
+      "skblid    1488 non-null object\n",
       "dtypes: object(1)\n",
-      "memory usage: 11.6+ KB\n"
+      "memory usage: 11.8+ KB\n"
      ]
     }
    ],
@@ -237,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,19 +269,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "both          1412\n",
+       "both          1425\n",
        "left_only       63\n",
-       "right_only       3\n",
+       "right_only       2\n",
        "Name: _merge, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -334,18 +341,13 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1475</th>\n",
-       "      <td>BarbroKerstinElisabetSoderberg</td>\n",
+       "      <th>1488</th>\n",
+       "      <td>ElinPersson</td>\n",
        "      <td>right_only</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1476</th>\n",
-       "      <td>ClaraNataliaTeresiaEuren</td>\n",
-       "      <td>right_only</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1477</th>\n",
-       "      <td>MarianneLindsten</td>\n",
+       "      <th>1489</th>\n",
+       "      <td>SigneSalen</td>\n",
        "      <td>right_only</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -353,42 +355,18 @@
        "</div>"
       ],
       "text/plain": [
-       "                              skblid      _merge\n",
-       "1475  BarbroKerstinElisabetSoderberg  right_only\n",
-       "1476        ClaraNataliaTeresiaEuren  right_only\n",
-       "1477                MarianneLindsten  right_only"
+       "           skblid      _merge\n",
+       "1488  ElinPersson  right_only\n",
+       "1489   SigneSalen  right_only"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "SKBLnew"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 3 entries, 1475 to 1477\n",
-      "Data columns (total 2 columns):\n",
-      "skblid    3 non-null object\n",
-      "_merge    3 non-null category\n",
-      "dtypes: category(1), object(1)\n",
-      "memory usage: 155.0+ bytes\n"
-     ]
-    }
-   ],
-   "source": [
-    "SKBLnew.info()"
    ]
   },
   {
@@ -400,7 +378,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3  antal poster\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 2 entries, 1488 to 1489\n",
+      "Data columns (total 2 columns):\n",
+      "skblid    2 non-null object\n",
+      "_merge    2 non-null category\n",
+      "dtypes: category(1), object(1)\n",
+      "memory usage: 138.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "SKBLnew.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2  antal poster\n"
      ]
     }
    ],
@@ -468,14 +469,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ended:  2020-09-04 16:36:21.040456\n"
+      "Ended:  2020-09-11 19:49:17.088913\n"
      ]
     }
    ],
@@ -483,6 +484,20 @@
     "end = datetime.now()\n",
     "print(\"Ended: \", end)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
