--- a/Riksdagens dokument SFS.ipynb
+++ b/Riksdagens dokument SFS.ipynb
@@ -897,6 +897,107 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2020-07-07 04:38:32     1\n",
+       "2020-07-07 04:38:01     1\n",
+       "2020-07-06 04:34:26     1\n",
+       "2020-07-04 04:35:10     1\n",
+       "2020-07-04 04:35:05     1\n",
+       "                       ..\n",
+       "2016-02-11 15:24:56    26\n",
+       "2016-02-11 15:24:55    32\n",
+       "2016-02-11 15:24:54    22\n",
+       "2015-12-22 04:36:11     1\n",
+       "2015-01-26 18:18:04     5\n",
+       "Name: publicerad, Length: 2196, dtype: int64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dftot.publicerad.value_counts().sort_index(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2020-07-07 04:38:32    1\n",
+       "2020-07-07 04:38:01    1\n",
+       "2020-07-06 04:34:26    1\n",
+       "2020-07-04 04:35:10    1\n",
+       "2020-07-04 04:35:05    1\n",
+       "2020-07-04 04:34:50    1\n",
+       "2020-07-02 04:36:17    1\n",
+       "2020-07-02 04:36:16    1\n",
+       "2020-07-02 04:36:15    2\n",
+       "2020-07-02 04:36:14    2\n",
+       "2020-07-02 04:36:13    2\n",
+       "2020-07-02 04:36:12    3\n",
+       "2020-07-02 04:36:11    1\n",
+       "2020-07-02 04:36:10    1\n",
+       "2020-07-02 04:36:09    3\n",
+       "2020-07-02 04:36:08    5\n",
+       "2020-07-02 04:36:07    4\n",
+       "2020-07-02 04:36:06    2\n",
+       "2020-07-02 04:36:05    1\n",
+       "2020-07-02 04:36:00    1\n",
+       "2020-07-02 04:35:57    1\n",
+       "2020-07-02 04:35:56    3\n",
+       "2020-07-02 04:35:55    4\n",
+       "2020-07-02 04:35:54    3\n",
+       "2020-07-02 04:35:52    2\n",
+       "2020-07-02 04:35:51    2\n",
+       "2020-07-02 04:35:49    1\n",
+       "2020-07-02 04:35:47    2\n",
+       "2020-07-02 04:35:45    1\n",
+       "2020-07-02 04:35:44    1\n",
+       "2020-07-02 04:35:42    8\n",
+       "2020-07-02 04:35:37    1\n",
+       "2020-07-02 04:35:36    3\n",
+       "2020-07-02 04:35:33    1\n",
+       "2020-07-02 04:35:16    1\n",
+       "2020-07-02 04:35:14    2\n",
+       "2020-07-02 04:35:10    1\n",
+       "2020-07-02 04:34:54    1\n",
+       "2020-07-01 04:41:40    1\n",
+       "2020-07-01 04:41:26    2\n",
+       "2020-07-01 04:41:11    1\n",
+       "2020-07-01 04:41:09    1\n",
+       "2020-07-01 04:41:07    1\n",
+       "2020-07-01 04:41:06    4\n",
+       "2020-06-30 04:37:09    1\n",
+       "2020-06-30 04:37:08    1\n",
+       "2020-06-30 04:37:05    1\n",
+       "2020-06-30 04:37:03    1\n",
+       "2020-06-30 04:37:02    1\n",
+       "2020-06-30 04:37:01    1\n",
+       "Name: publicerad, dtype: int64"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ftot.publicerad.value_counts().sort_index(ascending=False)[:50]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
